@@ -866,6 +866,129 @@ argument_list|()
 expr_stmt|;
 block|}
 block|}
+annotation|@
+name|Test
+DECL|method|TestDFSCheckSumType ()
+specifier|public
+name|void
+name|TestDFSCheckSumType
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Configuration
+name|conf
+init|=
+operator|new
+name|HdfsConfiguration
+argument_list|()
+decl_stmt|;
+name|conf
+operator|.
+name|setLong
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_BLOCK_SIZE_KEY
+argument_list|,
+name|BLOCK_SIZE
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setInt
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_BYTES_PER_CHECKSUM_KEY
+argument_list|,
+name|BYTES_PER_CHECKSUM
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_CHECKSUM_TYPE_KEY
+argument_list|,
+literal|"NULL"
+argument_list|)
+expr_stmt|;
+name|MiniDFSCluster
+name|cluster
+init|=
+operator|new
+name|MiniDFSCluster
+operator|.
+name|Builder
+argument_list|(
+name|conf
+argument_list|)
+operator|.
+name|numDataNodes
+argument_list|(
+name|NUM_OF_DATANODES
+argument_list|)
+operator|.
+name|build
+argument_list|()
+decl_stmt|;
+name|fileSys
+operator|=
+name|cluster
+operator|.
+name|getFileSystem
+argument_list|()
+expr_stmt|;
+try|try
+block|{
+name|Path
+name|file
+init|=
+operator|new
+name|Path
+argument_list|(
+literal|"try.dat"
+argument_list|)
+decl_stmt|;
+name|Random
+name|rand
+init|=
+operator|new
+name|Random
+argument_list|(
+name|seed
+argument_list|)
+decl_stmt|;
+name|rand
+operator|.
+name|nextBytes
+argument_list|(
+name|expected
+argument_list|)
+expr_stmt|;
+name|writeFile1
+argument_list|(
+name|file
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|fileSys
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|cluster
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 block|}
 end_class
 
